JDK 8 compilation fix